--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "script.js",
   "scripts": {
     "dev": "nodemon index.js", 
-    "start": "node index.js"
+    "start": "node script.js"
   },
   "keywords": [],
   "author": "",
